[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keysort"
version = "23.0.0"
dependencies = []
requires-python = ">=3.9"
authors = [
    {name = "Nik Kantar", email = "nik@nkantar.com" },
]
description = "A small utility for sorting lists of dictionaries by key"
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
  "Typing :: Typed",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "pytest>=8.3.2",
    "pydocstyle>=6.3.0",
    "mypy>=1.11.2",
    "pdbpp>=0.10.3",
]
